--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,11 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Home</title>
-</head>
-<body>
-    <h1>Welcome to the Home Page</h1>
-    <p>This is the home page of your Django project.</p>
-</body>
-</html>
+{% extends 'global/base.html' %}
+
+{% block texto %}
+    HOME
+{% endblock texto %}
