Arquivos estáticos incluidos

--- a/base/global/partials/head.html
+++ b/base/global/partials/head.html
@@ -1,7 +1,8 @@
-<!DOCTYPE html>
+{% load static %}<!DOCTYPE html>   
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Base</title>
+    <link rel="stylesheet" href="{% static 'home/css/blue.css' %}">
 </head>
 <body>
