Implementação de context para operações dinâmicas

--- a/base/global/partials/head.html
+++ b/base/global/partials/head.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Base</title>
+    <title>{{title}}Base</title>
     <link rel="stylesheet" href="{% static 'home/css/blue.css' %}">
 </head>
 <body>
