Padronizando css e deixando apenas um dir para isto

--- a/base/global/partials/head.html
+++ b/base/global/partials/head.html
@@ -3,6 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <title>{{title}}Base</title>
-    
+    <link rel="stylesheet" href="{% static 'global/css/style.css' %}">
 </head>
 <body>
