--- a/base/global/partials/postblock.html
+++ b/base/global/partials/postblock.html
@@ -1,17 +1,11 @@
 <article class = "post">
     <header>
         <h2 class = "post__title"> 
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+            {{post.title}}
         </h2>
     </header>
 
     <div class = "post__body">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-        Quisquam, quod. Quisquam, quod. Quisquam, quod. Quisquam, quod.
-            Quisquam, quod. Quisquam, quod. Quisquam, quod. Quisquam, quod.
-            Quisquam, quod. Quisquam, quod. Quisquam, quod. Quisquam, quod.
-            Quisquam, quod. Quisquam, quod. Quisquam, quod. Quisquam, quod.
-            Quisquam, quod. Quisquam, quod. Quisquam, quod. Quisquam, quod.
-                Quisquam, quod. Quisquam, quod. 
+        {{post.body}}
     </div>
 </article>
