--- a/base/static/global/css/style.css
+++ b/base/static/global/css/style.css
@@ -4,3 +4,21 @@
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
 }
+
+.content {
+    display: grid;
+    gap: 1.5rem;
+    padding: 1.5rem;
+}
+
+.posts {
+    background: #ffffff; 
+    padding: 1.5rem; 
+    box-shadow: 5px 2px 5px rgba(0,0,0,20%);
+}   
+
+@media (min-width: 600px) {
+    .content{
+        grid-template-columns: repeat(auto-fill, min-max(32rem, 1fr));
+    }
+}
