--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -4,6 +4,10 @@
     {{text}}
 {% endblock texto %}
 
+
 {% block posts %}
-    {%include 'global/partials/postblock.html'%}
+    {% for post in posts %} 
+        {%include 'global/partials/postblock.html'%}
+    {%endfor %}
 {% endblock posts %}
+
