--- a/base/global/partials/postblock.html
+++ b/base/global/partials/postblock.html
@@ -1,7 +1,9 @@
 <article class = "post">
     <header>
         <h2 class = "post__title"> 
+            <a href = "{% url 'blog:post' post.id %}">  {#usamos o nome da url e passamos o id do post#}
             {{post.title}}
+            </a>
         </h2>
     </header>
 
