--- a/base/static/global/css/style.css
+++ b/base/static/global/css/style.css
@@ -5,6 +5,15 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+a{
+    color: rgb(7, 165, 245);
+    text-decoration: none;
+}
+
+a:hover{
+    text-decoration: underline;
+}
+
 .content {
     display: grid;
     gap: 1.5rem;
@@ -17,8 +26,25 @@
     box-shadow: 5px 2px 5px rgba(0,0,0,20%);
 }   
 
+
+.menu__links {
+    background-color: black;
+    display: flex;
+    padding: 1.5rem;
+    list-style: none; /*remove bullet points */
+}
+
+.menu__links a {
+    color: fff;
+    list-style: none; 
+    padding: 1.5rem;;
+    
+}
+
+
 @media (min-width: 600px) {
     .content:not(:has(.single-post)){
         grid-template-columns: repeat(auto-fill, min-max(32rem, 1fr));
     }
 }
+
